@@ -36,7 +36,7 @@ class CFcolourmap(object):
                  'land_ice_basal_melt_rate' : 'mb.cpt',
                  'land_ice_basal_x_velocity' : 'velo.cpt',
                  'land_ice_basal_y_velocity' : 'velo.cpt',
-                 'surface_temperature' : 'temp.cpt',
+                 'surface_temperature' : 'surf_temp.cpt',
                  'lwe_precipitation_rate' : 'mb.cpt',
                  'land_ice_x_velocity' : 'velo.cpt',
                  'land_ice_y_velocity' : 'velo.cpt',
@@ -53,7 +53,7 @@ class CFcolourmap(object):
                  'topg' : 'topo.cpt',
                  'acab' : 'mb.cpt',
                  'bmlt' : 'mb.cpt',
-                 'artm' : 'temp.cpt',
+                 'artm' : 'surf_temp.cpt',
                  'btemp' : 'temp.cpt',
                  'prcp' : 'mb.cpt',
                  'ablt' : 'mb.cpt',
