@@ -1,0 +1,17 @@
+#	cpt file created by: makecpt -Cjet -T0/20/1
+#COLOR_MODEL = RGB
+#
+-70	0	0	127	-60	0	0	127
+-60	0	0	178	-50	0	0	178
+-50	0	0	229	-40	0	0	229
+-40	0	26	255	-30	0	26	255
+-30	0	77	255	-20	0	77	255
+-20	0	128	255	-10	0	128	255
+-10	0	179	255	0	0	179	255
+0	255	229	0	10	255	229	0
+10	255	178	0	20	255	178	0
+20	255	127	0	30	255	127	0
+30	255	76	0	40	255	76	0
+B	0	0	127
+F	255	76	0
+N	128	128	128
